force-app/main/default/objects/Customer_Journey__c/Customer_Journey__c.object-meta.xml
<CustomObject>
    <label>Customer Journey</label>
    <pluralLabel>Customer Journeys</pluralLabel>
    <nameField><label>Customer Journey Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Persistent per-customer orchestration memory. Field history ON.</description>
</CustomObject>