force-app/main/default/objects/Customer_Journey__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <label>Coupon Code</label>
    <description>The personalized single-use WooCommerce coupon issued to this shopper in chat.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>