force-app/main/default/objects/Customer_Journey__c/fields/Coupon_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount_Amount__c</fullName>
    <label>Coupon Discount Amount</label>
    <description>Actual discount value applied when the coupon was redeemed (order discount_total). Set by WooOrderService.</description>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>