force-app/main/default/objects/Customer_Journey__c/fields/Coupon_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount_Percent__c</fullName>
    <label>Coupon Discount Percent</label>
    <description>Percent off on the issued coupon. Set by CouponService at issue time.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>