force-app/main/default/objects/Customer_Journey__c/fields/Coupon_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Issued_Date__c</fullName>
    <label>Coupon Issued Date</label>
    <description>When the personalized coupon was issued. Set by CouponService at issue time.</description>
    <type>DateTime</type>
</CustomField>