force-app/main/default/objects/Customer_Journey__c/fields/Coupon_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Redeemed__c</fullName>
    <label>Coupon Redeemed</label>
    <defaultValue>false</defaultValue>
    <description>True once the issued coupon is used on an ingested WooCommerce order. Set by WooOrderService.</description>
    <type>Checkbox</type>
</CustomField>