force-app/main/default/objects/Customer_Journey__c/fields/Coupon_Redeemed_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Redeemed_Date__c</fullName>
    <label>Coupon Redeemed Date</label>
    <description>When the coupon was redeemed (order ingestion time). Set by WooOrderService.</description>
    <type>DateTime</type>
</CustomField>