force-app/main/default/objects/Customer_Journey__c/fields/Coupon_Redeemed_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Redeemed_Order_Id__c</fullName>
    <label>Coupon Redeemed Order Id</label>
    <description>WooCommerce order id on which the coupon was redeemed. Set by WooOrderService.</description>
    <type>Text</type>
    <length>32</length>
</CustomField>