force-app/main/default/objects/Customer_Journey__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Primary identity key for the journey; used to upsert one journey per customer.</description>
</CustomField>