force-app/main/default/objects/Customer_Journey__c/fields/Last_Agent__c.field-meta.xml
<CustomField>
    <fullName>Last_Agent__c</fullName>
    <label>Last Agent</label>
    <type>Text</type>
    <length>120</length>
    <description>The agent that last acted for this customer.</description>
</CustomField>