force-app/main/default/objects/Customer_Journey__c/fields/Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction__c</fullName>
    <label>Last Interaction</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent agent interaction in this journey.</description>
</CustomField>