force-app/main/default/objects/Customer_Journey__c/fields/Last_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage__c</fullName>
    <label>Last Stage</label>
    <type>Text</type>
    <length>120</length>
    <description>Where the customer is in the journey (e.g. Browsing, Recommended, Purchased, Post-Purchase).</description>
</CustomField>