force-app/main/default/objects/Customer_Journey__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer Journeys</relationshipLabel>
    <relationshipName>Customer_Journeys</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>