force-app/main/default/objects/Customer_Journey__c/fields/Post_Purchase_Done_Order_Ids__c.field-meta.xml
<CustomField>
    <fullName>Post_Purchase_Done_Order_Ids__c</fullName>
    <label>Post-Purchase Done Order Ids</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Comma-separated Order ids that already received a post-purchase offer (skip to avoid duplicates).</description>
</CustomField>