force-app/main/default/objects/Customer_Journey__c/fields/Preferences__c.field-meta.xml
<CustomField><fullName>Preferences__c</fullName><label>Preferences</label><type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines><trackHistory>true</trackHistory><description>JSON of discovery prefs captured by Product_Advisor.</description></CustomField>