force-app/main/default/objects/Customer_Journey__c/fields/Purchased_Product_Ids__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product_Ids__c</fullName>
    <label>Purchased Product Ids</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Comma-separated Product2 ids this customer has purchased (exclude from new recommendations).</description>
</CustomField>