force-app/main/default/objects/Customer_Journey__c/fields/Recommended_Product_Ids__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Product_Ids__c</fullName>
    <label>Recommended Product Ids</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Comma-separated Product2 ids already recommended to this customer (do not repeat).</description>
</CustomField>